clusters/main/kubernetes/system/networkpolicies/app/longhorn-system-allow-ingress-webhook.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-webhook
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      longhorn.io/admission-webhook: longhorn-admission-webhook
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9502"
              protocol: TCP
